<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="2">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/battle_ground_port"
        />

    <Button
        android:id="@+id/fightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/opensansbold"
        android:text="@string/battle_fight"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
      />
    <Button
        android:id="@+id/runBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/opensansbold"
        android:text="@string/battle_run"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/fightBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        />
    <Button
        android:id="@+id/switchPokeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/opensansbold"
        android:text="@string/switch_pokemon"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/itemBtn"
        app:layout_constraintStart_toEndOf="@id/runBtn"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        />
    <Button
        android:id="@+id/itemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/opensansbold"
        android:text="@string/item"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fightBtn"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>