<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="120dp">
    <TextView
        android:id="@+id/prompt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_move"
        android:textSize="15sp"
        android:fontFamily="@font/opensansbold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/yesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_message"
        />
    <Button
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_message"
        />



</androidx.constraintlayout.widget.ConstraintLayout>