<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="2">

    <Button
        android:id="@+id/wildBattleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/opensansbold"
        android:text="@string/wild_battle"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/trainerBattleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainer_battle"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/opensansbold"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/pokeCenterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wildBattleBtn"
        />

    <Button
        android:id="@+id/pokeCenterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_center"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:fontFamily="@font/opensansbold"
        android:backgroundTint="@color/transparent"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/trainerBattleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/changeTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_team"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:fontFamily="@font/opensansbold"
        android:backgroundTint="@color/transparent"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/pokeCenterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_img_port"
   />

</androidx.constraintlayout.widget.ConstraintLayout>