<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <Button
        android:id="@+id/wildBattleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wild_battle"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/opensansbold"
        android:backgroundTint="@color/yellow"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     />

    <Button
        android:id="@+id/trainerBattleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainer_battle"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/opensansbold"
        android:backgroundTint="@color/yellow"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wildBattleBtn"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/pokeCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_center"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/opensansbold"
        android:backgroundTint="@color/yellow"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/trainerBattleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pokemon_main_menu"
     />

</androidx.constraintlayout.widget.ConstraintLayout>