<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/main_img_port">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team"
                android:text="@string/team"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:fontFamily="@font/opensansbold"
                app:strokeColor="@color/red"
                app:strokeWidth="2dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/team"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/collection"
                android:text="@string/collection"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:backgroundTint="@color/transparent_darker"
                android:fontFamily="@font/opensansbold"
                app:strokeColor="@color/red"
                app:strokeWidth="2dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf = "parent"
                android:layout_marginTop="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintStart_toStartOf="@id/collection"
                app:layout_constraintTop_toBottomOf="@+id/collection"
                android:id="@+id/collection_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/opensansbold"
                app:strokeColor="@color/red"
                app:strokeWidth="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>